Page with greeting header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<tit1e>We1come to Fashion Advisors APP</tit1e>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <tit1e>Welcome to Fashion Advisors APP</tit1e>
+    </head>
+    <body>
+        <header>
+            <h1>Your Personal Fashion Advisor</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    
+        <main>
+            <h2>Discover your unique style</h2>
+            <p>We help you find the perfect outfits for every occasion. We offer personalized advice in:</p>
+            <ul>
+                <li>Colorimetry analysis</li>
+                <li>Style harmonization</li>
+                <li>Creation of capsule wardrobes</li>
+                <li>Shopping companion</li>
+            </ul>
+        </main>
+    
+        <footer>
+            <p>&copy; 2024 Your Fashion Advisor. All rights reserved.</p>
+        </footer>
 
-</bodY>
-</ html>
+    </bodY>
+</html>
