Page with greeting header

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1> Hey here Carlos from my laptop </hi>
-</bodY>
-</ html>
+    <h1>Hey Nicolas here from my personal laptop</h1>
+</body>
+</html>
