Added my country

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> Hey here Carlos from my laptop </hi>
-    <h1>Hey Nicolas here from my personal laptop</h1>
+    <h1>Hey! Nicolas here from my personal laptop. I am from Colombia</h1>
 </body>
 </html>
