--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> Hey here Carlos from my laptop </hi>
-<h2> Hello, it's me, Andrea! </h2>
+<h2 style="color: red;"> Hello, it's me, Andrea! I'm from Brazil</h2>
 </bodY>
 </ html>
