--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                 <li>Creation of capsule wardrobes</li>
                 <li>Shopping companion</li>
             </ul>
+
+            <form action="mailto:xyz@com" method="post" enctype="text/plain">
+                Name: <br>
+                <input type="text" name="name"> <br>
+                Email: <br>
+                <input type="text" name="mail"> <br>
+                <input type="submit" value="Send">
+                <input type="reset" value="Reset">
+            </form>
         </main>
     
         <footer>
@@ -35,4 +44,4 @@
         </footer>
 
     </bodY>
-</ html>
+</html>
