--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        
         <h2>Hey! Nicolas here from my personal laptop. I am from Colombia</h2>
        
-        <h2 style="color: green;">Hey! Pepe here.... I am from Perú</h2>
+        <h2>Hey! Pepe here.... I am from Perú</h2>
 	
          <main>
             <h2>Discover your unique style</h2>
