--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <tit1e>Welcome to Fashion Advisors APP</tit1e>
-   <style>
-	color:red;
-
-   </style>
+        <title>Welcome to Fashion Advisors APP</title>
+   	<style>
+		color:red;
+   	</style>
+	    
 </head>
 <body>
 	
         <h2> Hey Customer! Welcome to our shop. We are ready to serve you    <u>Carlos</u> </h2>
   
-	<form action-"mailto:carlos.sibaja@gmail.com" method="post" enctype="text/plain">
+	<form action="mailto:carlos.sibaja@gmail.com" method="post" enctype="text/plain">
 	
-		Name" <br>
-			<input type="text" name="name"><br>
-        		E-mail: <br>
-        		<input type="text" name="mail"><br>
-              		<input type="submit" value="Send">
-              		<input type="reset" value="Reset">
+		Name: <br>	<input type="text" name="name"><br>
+        	E-mail: <br>	<input type="text" name="mail"><br>
+              	<input type="submit" value="Send">
+              	<input type="reset" value="Reset">
 	</form>
          
         <h2 style="color: red;"> Hello, it's me, Andrea! I'm from Brazil</h2>
@@ -44,5 +42,5 @@
             <p>&copy; 2024 Your Fashion Advisor. All rights reserved.</p>
         </footer>
 
-</bodY>
+</body>
 </html>
