--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
          
     # Andrea add code for the email here. 
         <h2 style="color: red;"> Hello, it's me, Andrea! I'm from Brazil</h2>
-
+        <form action="mailto:andreamll@yahoo.com.br" method="post" enctype="text/plain">
+            Name: <br>	<input type="text" name="name"><br>
+            E-mail: <br>	<input type="text" name="mail"><br>
+                <input type="submit" value="Send">
+                <input type="reset" value="Reset">
+        </form>
 
     
      # Pepe add code here.
