--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Welcome to Fashion Advisors APP</title>
 
    	    <style>
-		    color:red
+		    color: red
    	    </style>  
     </head>
 <body>
@@ -32,7 +32,7 @@
 
     
      # Pepe add code here.
-        <h2 style="color: rgb(62, 28, 186);>Hey! Pepe here.... I am from Perú</h2>
+        <h2 style="color: rgb(62, 28, 186);"> Hey! Pepe ... I am from Perú</h2>
 
     <form action="mailto:joseluisburga75ja@gmail.com" method="post" enctype="text/plain">
 	
