--- a/Main.html
+++ b/Main.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FashLink</title>
+        <title>FashLink APP</title>
    </head>
 <body>
 	
-        <h2> Hey Customer! Welcome to our shop. We are ready to serve you    <u>Carlos</u> </h2>
+        <h2> HEY TEAM LET'S CODE OUR APP    <u>Carlos</u> </h2>
   
 		
    
